data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_483.wast
;; 4. **Test Data Flow Misinterpretation**: A loop that carries through values using `local.set` and `local.get`, with `br_if` incorrectly handling these values, causing the loop to never exit. Ensures stack operations within loops do not interfere due to context mismanagement.

(assert_invalid
  (module (func $data-flow-misinterpretation
    (local i32)
    (i32.const 0)
    (local.set 0)
    (loop (block (local.get 0) (i32.const 1) (i32.add) (local.set 0) (local.get 0) (i32.const 1) (i32.eq) (br_if 0)) (local.get 0))
  ))
  "type mismatch"
)